--- a/src/www/views/start/start.html
+++ b/src/www/views/start/start.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Welcome to MomsMed" id="tour-view">
   <ion-nav-buttons side="right">
-    <a class="button button-clear" href="#/home" nav-clear>Start</a>
+    <a class="button button-clear" href="#/home" >Start</a>
   </ion-nav-buttons>
 
 </ion-view>
