--- a/src/www/views/home/home.html
+++ b/src/www/views/home/home.html
@@ -23,7 +23,7 @@
               <h3>Results</h3>
               <ul>
                 <p class = "item"> Medication's Name: {{enteredMed}}</p>
-                <p class="item"> Pregnancy Category: {{myinfo.results[0].pregnancy[0][myinfo.results[0].pregnancy[0].indexOf('Category')+9]}} </p>
+                <p class="item"> Pregnancy Category: {{result}} </p>
               </ul>
 
             </div>
@@ -33,3 +33,4 @@
         </div>
     </ion-content>
 </ion-view>
+<!--[myinfo.results[0].pregnancy[0].indexOf('Category')+9]-->
